<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.example.myhome.presentation.features.meter.scan.MeterScanViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingHorizontal="23dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_corner_card_normal"
                    android:backgroundTint="@color/primary_light"
                    android:orientation="horizontal"
                    android:padding="16dp">

                    <LinearLayout
                        android:layout_width="43dp"
                        android:layout_height="43dp"
                        android:layout_marginRight="15dp"
                        android:background="@drawable/circle_night"
                        android:gravity="center">

                        <ImageView
                            android:id="@+id/meter_icon"
                            android:layout_width="17dp"
                            android:layout_height="17dp"
                            android:src="@{viewModel.meterParcelable.getIcon()}"
                            app:tint="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/address"
                            style="@style/Text"
                            android:text="@{viewModel.meterParcelable.address}"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/type_of_service_name"
                            style="@style/DescriptionText"
                            android:text="@{viewModel.meterParcelable.typeOfServiceName}" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/current_reading"
                            style="@style/Text"
                            android:text="0"
                            android:textSize="40dp"
                            android:textStyle="bold"
                            android:paddingRight="10dp"/>
                        <TextView
                            style="@style/Text"
                            android:text="@{viewModel.meterParcelable.unitName}"
                            android:textSize="24dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="20dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            style="@style/DescriptionText"
                            android:text="Потребление"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:id="@+id/consumption"
                            style="@style/Text"
                            android:textColor="@color/primary"
                            android:text="0"
                            android:textSize="20dp"
                            android:textStyle="bold"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:gravity="end">

                        <TextView
                            android:gravity="end"
                            style="@style/DescriptionText"
                            android:text="Предыдущие показания"
                            android:layout_marginBottom="4dp"/>

                        <TextView
                            android:id="@+id/previous_reading"
                            style="@style/Text"
                            android:text="@{viewModel.meterParcelable.previousReading + ` ` + viewModel.meterParcelable.unitName}"
                            android:textSize="20dp"
                            android:textStyle="bold"/>
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="30dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >

                        <Button
                            android:id="@+id/btn_1"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="1" />

                        <Button
                            android:id="@+id/btn_2"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="2"
                            />
                        <Button
                            android:id="@+id/btn_3"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="3"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_4"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="4"
                            />

                        <Button
                            android:id="@+id/btn_5"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="5"
                            />
                        <Button
                            android:id="@+id/btn_6"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="6"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_7"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="7"
                            />

                        <Button
                            android:id="@+id/btn_8"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="8"
                            />
                        <Button
                            android:id="@+id/btn_9"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="9"
                            />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_comma"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text=","
                            />

                        <Button
                            android:id="@+id/btn_0"
                            style="@style/DigitButton"
                            android:layout_weight="1"
                            android:text="0"
                            />
                        <ImageButton
                            android:id="@+id/btn_del"
                            style="@style/DigitButtonDelete"
                            android:backgroundTint="@color/transparent"
                            android:layout_width="112dp"
                            android:layout_height="79dp"
                            android:layout_weight="1"
                            android:src="@drawable/delete"
                            />
                    </LinearLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_next"
                    style="@style/ActionButton"
                    android:layout_height="70dp"
                    android:textSize="16dp"
                    android:text="Внести"
                    android:enabled="false"
                    />
            </LinearLayout>
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>