...
                            android:orientation="vertical"
                            android:gravity="center"
                            android:layout_gravity="center_vertical"
                            android:paddingHorizontal="10dp">
                            <!--круглая кнопка раз-->
                            <LinearLayout
                                android:id="@+id/update_meter_button"
                                style="@style/CircleButtonLayout"
                                android:layout_marginBottom="21dp">
                                <LinearLayout
                                    style="@style/CircleButton"
                                    android:layout_marginBottom="7dp"
                                    >
...
                                    android:textSize="12dp"
                                    android:textAlignment="center"
                                    />
                            </LinearLayout>
                            <!--круглая кнопка два-->
                            <LinearLayout
                                android:id="@+id/add_reading_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:gravity="center">

                                <LinearLayout
...
                                    android:orientation="horizontal">
                                    <TextView
                                        style="@style/Text"
                                        android:text="Заводской номер"
                                        android:layout_weight="1"/>
                                    <TextView
                                        android:id="@id/factory_number"
                                        style="@style/Text"
                                        android:text="@{viewModel.meterParcelable.factoryNumber}"
                                        android:textStyle="bold"
                                        android:layout_gravity="end"/>
                                </LinearLayout>
                            </LinearLayout>
...
