...
                    android:layout_height="200dp"
                    android:src="@drawable/loading_state"
                    android:layout_marginBottom="20dp"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/title"
                    style="@style/Text"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="22dp"
                    android:textStyle="bold"
...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>
            </LinearLayout>

            <TextView
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:gravity="center"
                android:layout_below="@id/error_layout"
                android:layout_centerHorizontal="true"/>
...
