...
                            android:orientation="vertical">
                            <TextView
                                android:text="Срок передачи показаний — с 20 по 25 число"
                                style="@style/DescriptionText"
                                android:layout_marginBottom="20dp"/>
                            <Button
                                android:id="@+id/add_meter_button"
                                style="@style/ActionButton"
                                android:text="Добавить счётчик"
                                android:layout_marginBottom="25dp"/>
                            <androidx.recyclerview.widget.RecyclerView
                                android:id="@+id/meter_recycler_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:nestedScrollingEnabled="false"
                                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
                        </LinearLayout>
                    </LinearLayout>
...
